--- a/package.json
+++ b/package.json
@@ -149,5 +149,8 @@
     "eslint": "^9.12.0",
     "jest": "^29.7.0",
     "standard": "^17.1.2"
+  },
+  "overrides": {
+    "happy-dom": "^20.0.2"
   }
 }
